@@ -72,6 +72,28 @@
 								</suiteXmlFiles>
 							</configuration>
 						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-compiler-plugin</artifactId>
+							<version>3.8.1</version> <!-- Ensure compatibility
+							with your JDK version -->
+							<configuration>
+								<source>11</source>
+								<target>11</target>
+								<release>11</release> <!-- Use if on JDK 9+ to
+								specify the Java version to compile against -->
+								<compilerArgs>
+									<arg>--add-opens</arg>
+									<arg>java.base/java.lang=ALL-UNNAMED</arg>
+									<arg>--add-opens</arg>
+									<arg>java.base/java.util=ALL-UNNAMED</arg>
+									<arg>--add-opens</arg>
+									<arg>
+										java.base/java.util.concurrent=ALL-UNNAMED</arg>
+									
+								</compilerArgs>
+							</configuration>
+						</plugin>
 					</plugins>
 				</pluginManagement>
 			</build>
@@ -79,40 +101,41 @@
 		<profile>
 			<id>Purchase</id>
 			<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.2.5</version>
-					<configuration>
-						<suiteXmlFiles>
-							<suiteXmlFile>testSuites/Purchase.xml</suiteXmlFile>
-						</suiteXmlFiles>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>3.2.5</version>
+							<configuration>
+								<suiteXmlFiles>
+									<suiteXmlFile>testSuites/Purchase.xml</suiteXmlFile>
+								</suiteXmlFiles>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
 		</profile>
 		<profile>
 			<id>ErrorValidation</id>
 			<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.2.5</version>
-					<configuration>
-						<suiteXmlFiles>
-							<suiteXmlFile>testSuites/ErrorValidationTests.xml</suiteXmlFile>
-						</suiteXmlFiles>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>3.2.5</version>
+							<configuration>
+								<suiteXmlFiles>
+									<suiteXmlFile>
+										testSuites/ErrorValidationTests.xml</suiteXmlFile>
+								</suiteXmlFiles>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
 		</profile>
 	</profiles>
 
